--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -66,7 +66,7 @@
 
 
         <% if !@reviews.empty? && current_user.profile.is_bar_manager%>
-          <h1>Reviews</h1>
+          <h1 class="t">Reviews</h1>
             <div class="row">
               <% @reviews.each do |review| %>
                 <div class="col-xs-10 col-sm-6 col-md-4 col-lg-3">
